k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api
  template:
    metadata:
      labels:
        app: nodejs-api
    spec:
      containers:
      - name: ctr-nodejs-api
        image: nodejs-api:v1  # Replace with your actual image name
        ports:
        - containerPort: 5001
