k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-service
spec:
  type: NodePort
  selector:
    app: nodejs-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
    nodePort: 31110  # You can choose any port in the range 30000-32767
